--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "author": "Sam Reskala",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
